--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,16 +1,17 @@
 <div class="center">
-    <div class="row">
-      <% @listings.each do |listing| %>
+  <div class="row">
+    <% @listings.each do |listing| %>
         <div class="col-md-3">
 
           <div class="thumbnail">
             <%= image_tag listing.image.url %>
             <div class="caption">
+              <div>Bla bla bla ...</div>
               <h3><%= listing.name %></h3>
               <p><%= number_to_currency(listing.price, :unit => '€') %></p>
               <p><%= link_to 'Show', listing, class: "btn btn-primary" %>
-              <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-default" %>
-              <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default" %></p>
+                <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-default" %>
+                <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default" %></p>
             </div>
           </div>
 
@@ -18,8 +19,9 @@
           <br>
 
         </div>
-      <% end %>
-    </div>
+    <% end %>
+  </div>
+
 </div>
 <br>
 <%= link_to 'New Listing', new_listing_path, class: "btn btn-primary" %>
